deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: shilpigoyal729/wisecow:${GITHUB_SHA}
          ports:
            - containerPort: 4499
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
          volumeMounts:
            - name: website-files
              mountPath: /usr/share/nginx/html
      volumes:
        - name: website-files
          hostPath:
            path: /data/website  # Local path for your host machine; change it as needed
            type: DirectoryOrCreate
